objects/ASI_CRM_Postal_Code__c.object
<CustomObject>
    <description>ASI CRM - Postal Code. The following countries are using this object: 
-PRJ</description>
    <fields>
        <fullName>ASI_CRM_JP_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_City_EN__c</fullName>
        <label>City (EN)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Metropolitan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metropolitan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Prefecture_EN__c</fullName>
        <label>Prefecture (EN)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AICHI</fullName>
                </value>
                <value>
                    <fullName>AKITA</fullName>
                </value>
                <value>
                    <fullName>AOMORI</fullName>
                </value>
                <value>
                    <fullName>CHIBA</fullName>
                </value>
                <value>
                    <fullName>EHIME</fullName>
                </value>
                <value>
                    <fullName>FUKUI</fullName>
                </value>
                <value>
                    <fullName>FUKUOKA</fullName>
                </value>
                <value>
                    <fullName>FUKUSHIMA</fullName>
                </value>
                <value>
                    <fullName>GIFU</fullName>
                </value>
                <value>
                    <fullName>GUMMA</fullName>
                </value>
                <value>
                    <fullName>HIROSHIMA</fullName>
                </value>
                <value>
                    <fullName>HOKKAIDO</fullName>
                </value>
                <value>
                    <fullName>HYOGO</fullName>
                </value>
                <value>
                    <fullName>IBARAKI</fullName>
                </value>
                <value>
                    <fullName>ISHIKAWA</fullName>
                </value>
                <value>
                    <fullName>IWATE</fullName>
                </value>
                <value>
                    <fullName>KAGAWA</fullName>
                </value>
                <value>
                    <fullName>KAGOSHIMA</fullName>
                </value>
                <value>
                    <fullName>KANAGAWA</fullName>
                </value>
                <value>
                    <fullName>KOCHI</fullName>
                </value>
                <value>
                    <fullName>KUMAMOTO</fullName>
                </value>
                <value>
                    <fullName>KYOTO</fullName>
                </value>
                <value>
                    <fullName>MIE</fullName>
                </value>
                <value>
                    <fullName>MIYAGI</fullName>
                </value>
                <value>
                    <fullName>MIYAZAKI</fullName>
                </value>
                <value>
                    <fullName>NAGANO</fullName>
                </value>
                <value>
                    <fullName>NAGASAKI</fullName>
                </value>
                <value>
                    <fullName>NARA</fullName>
                </value>
                <value>
                    <fullName>NIIGATA</fullName>
                </value>
                <value>
                    <fullName>OITA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Prefecture__c</fullName>
        <label>Prefecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北海道</fullName>
                </value>
                <value>
                    <fullName>青森県</fullName>
                </value>
                <value>
                    <fullName>岩手県</fullName>
                </value>
                <value>
                    <fullName>宮城県</fullName>
                </value>
                <value>
                    <fullName>秋田県</fullName>
                </value>
                <value>
                    <fullName>山形県</fullName>
                </value>
                <value>
                    <fullName>福島県</fullName>
                </value>
                <value>
                    <fullName>茨城県</fullName>
                </value>
                <value>
                    <fullName>栃木県</fullName>
                </value>
                <value>
                    <fullName>群馬県</fullName>
                </value>
                <value>
                    <fullName>埼玉県</fullName>
                </value>
                <value>
                    <fullName>千葉県</fullName>
                </value>
                <value>
                    <fullName>東京都</fullName>
                </value>
                <value>
                    <fullName>神奈川県</fullName>
                </value>
                <value>
                    <fullName>新潟県</fullName>
                </value>
                <value>
                    <fullName>富山県</fullName>
                </value>
                <value>
                    <fullName>石川県</fullName>
                </value>
                <value>
                    <fullName>福井県</fullName>
                </value>
                <value>
                    <fullName>山梨県</fullName>
                </value>
                <value>
                    <fullName>長野県</fullName>
                </value>
                <value>
                    <fullName>岐阜県</fullName>
                </value>
                <value>
                    <fullName>静岡県</fullName>
                </value>
                <value>
                    <fullName>愛知県</fullName>
                </value>
                <value>
                    <fullName>三重県</fullName>
                </value>
                <value>
                    <fullName>滋賀県</fullName>
                </value>
                <value>
                    <fullName>京都府</fullName>
                </value>
                <value>
                    <fullName>大阪府</fullName>
                </value>
                <value>
                    <fullName>兵庫県</fullName>
                </value>
                <value>
                    <fullName>奈良県</fullName>
                </value>
                <value>
                    <fullName>和歌山県</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Town_EN__c</fullName>
        <label>Town (EN)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Town__c</fullName>
        <label>Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Large_Geographical_Area__c</fullName>
        <label>Large Geographical Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-HOKKAIDO</fullName>
                </value>
                <value>
                    <fullName>B-TOHOKU</fullName>
                </value>
                <value>
                    <fullName>C-NORTH KANTO</fullName>
                </value>
                <value>
                    <fullName>D-SOUTH KANTO</fullName>
                </value>
                <value>
                    <fullName>E-KOSHINETSU</fullName>
                </value>
                <value>
                    <fullName>F-CHUBU</fullName>
                </value>
                <value>
                    <fullName>G-KANSAI</fullName>
                </value>
                <value>
                    <fullName>H-CHU/SHIKOKU</fullName>
                </value>
                <value>
                    <fullName>I-KYUSHU/OKINAWA</fullName>
                </value>
                <value>
                    <fullName>K-TOKYO MET</fullName>
                </value>
                <value>
                    <fullName>Z-OTHER AREA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_JP_Prefecture__c</columns>
        <columns>ASI_CRM_JP_Prefecture_EN__c</columns>
        <columns>ASI_CRM_Large_Geographical_Area__c</columns>
        <columns>ASI_CRM_JP_City__c</columns>
        <columns>ASI_CRM_JP_Town__c</columns>
        <columns>ASI_CRM_JP_Metropolitan__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_JP_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Postal Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Postal_Code</fullName>
        <active>true</active>
        <label>JP Postal Code</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Contains_Dash</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.DeveloperName=&apos;ASI_CRM_JP_Postal_Code&apos;&amp;&amp; !CONTAINS(Name,&apos;-&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Japan Postal Code must contains a dash.</errorMessage>
    </validationRules>
</CustomObject>